FIX: Text owner less visible, and hidden when not shared.

--- a/couchdb/_attachments/css/work.css
+++ b/couchdb/_attachments/css/work.css
@@ -352,7 +352,9 @@ tr.fulltext .unit .text {
 
 div.owner {
   font-style: italic;
+  font-size: 60%;
   color:normal;
+  float:right;
 }
 
 .button.show {
